nueva nav y contenido

--- a/index.html
+++ b/index.html
@@ -17,63 +17,70 @@
       href="https://fonts.googleapis.com/css?family=Manjari&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="estilos/index.css" />
+
     <link rel="icon" href="Imagenes/B.png" />
   </head>
   <body>
-    <div class="containerlayout">
-        <section class="indexnav">
-          <div class="BLYTHE">
-            <h1><span>BLYTHE</span></h1>
+    <header>
+      <div class="BLYTHE">
+        <h1><span>BLYTHE</span></h1>
+      </div>
+
+      <div class="navlist">
+        <ul class="nav">
+          <li class="nav__item nav__item">
+            <span class="nav__inner">
+              <span class="nav__title">Consolas</span>
+            </span>
+          </li>
+          <li class="nav__item">
+            <span class="nav__inner">
+              <span class="nav__title">Proximos juegos</span>
+            </span>
+          </li>
+          <li class="nav__item">
+            <span class="nav__inner">
+              <span class="nav__title">Juegos independientes</span>
+            </span>
+          </li>
+          <li class="nav__item nav__item">
+            <span class="nav__inner">
+              <span class="nav__title">Productos</span>
+            </span>
+          </li>
+          <li class="nav__item nav__item">
+            <span class="nav__inner">
+              <span class="nav__title">Reseñas</span>
+            </span>
+          </li>
+        </ul>
+      </div>
+    </header>
+
+    <div class="conatinerindex">
+      <div class="posicionindex">
+        <div class="caja uno">
+          <h1>NINTENDO SWITCH</h1>
+          <div class="texto">
+            <h4>Juega donde quieras, cuando quieras y con quien quieras</h4>
           </div>
-          <nav>
-            <ul class="Menu">
-              <li class="hnav"><a href="Nuevosjuegos.html">NUEVOS JUEGOS</a></li>
-              <li class="hnav"><a href="Productos.html">PRODUCTOS</a></li>
-              <li class="hnav"><a href="Indies.html">INDIES</a></li>
-              <li class="hnav"><a href="Juegos.html">JUEGOS</a></li>
-              <li class="hnav"><a href="Reseñas.html">RESEÑAS</a></li>
-            </ul>
-          </nav>
-        </section>
-  <section class="indexbody">
-      <div class="conatinerindex">
-        <div class="posicionindex">
-          
-          <div class="caja uno">
-             <a href="Juegos.html"><h1>NINTENDO SWITCH</h1>
-            <div class="texto">
-              <h4>Juega donde quieras, cuando quieras y con quien quieras</h4>
-            </div></a>
+        </div>
+
+        <div class="caja dos">
+          <h1>PLAYSTATION 5</h1>
+          <div class="texto">
+            <h4>Sé increíble, sorpréndete, sé PlayStation</h4>
           </div>
-  
-          <div class="caja dos">
-            <h1>PLAYSTATION 5</h1>
-            <div class="texto">
-              <h4>Sé increíble, sorpréndete, sé PlayStation</h4>
-            </div>
-          </div>
-  
-          <div class="caja tres">
-            <h1>XBOX SERIES X</h1>
-            <div class="texto">
-              <h4>LA NUEVA XBOX SERIES X. LA MÁS RÁPIDA. LA MÁS POTENTE</h4>
-            </div>
+        </div>
+
+        <div class="caja tres">
+          <h1>XBOX SERIES X</h1>
+          <div class="texto">
+            <h4>LA NUEVA XBOX SERIES X. LA MÁS RÁPIDA. LA MÁS POTENTE</h4>
           </div>
         </div>
       </div>
-    </section>
-     
-  
-    <section class="bgfooter">
-        <footer class="footer">
-          <h1 class="subtitle">Redes Sociales</h1>
-          <div id="sociales">
-            <img class="logos" src="Imagenes/Instagram.png" alt="Logo" />
-            <img class="logos" src="Imagenes/Facebook.png" alt="Logo" />
-            <img class="logos" src="Imagenes/Twitter.png" alt="Logo" />
-          </div>
-        </footer>
-      </section>
+    </div>
   </body>
 </html>
