--- a/index.html
+++ b/index.html
@@ -21,66 +21,104 @@
 
     <link rel="icon" href="Imagenes/B.png" />
   </head>
-  <body>
-    <header>
-      <div class="BLYTHE">
-        <h1><span>BLYTHE</span></h1>
-      </div>
 
-      <div class="navlist">
-        <ul class="nav">
-          <li class="nav__item nav__item">
-            <span class="nav__inner">
-              <span class="nav__title">Consolas</span>
-            </span>
-          </li>
-          <li class="nav__item">
-            <span class="nav__inner">
-              <span class="nav__title">Proximos juegos</span>
-            </span>
-          </li>
-          <li class="nav__item">
-            <span class="nav__inner">
-              <span class="nav__title">Juegos independientes</span>
-            </span>
-          </li>
-          <li class="nav__item nav__item">
-            <span class="nav__inner">
-              <span class="nav__title">Productos</span>
-            </span>
-          </li>
-          <li class="nav__item nav__item">
-            <span class="nav__inner">
-              <span class="nav__title">Reseñas</span>
-            </span>
-          </li>
-        </ul>
-      </div>
+  <body>
+    <header id="menu">
+      <nav>
+        <div class="logo">
+          <span>BLYTHE</span>
+        </div>
+
+        <div class="navlist">
+          <ul class="nav">
+            <li class="nav__item nav__item">
+              <span class="nav__inner">
+                <span class="nav__title">Inicio</span>
+              </span>
+            </li>
+            <li class="nav__item nav__item">
+              <span class="nav__inner">
+                <span class="nav__title">Juegos</span>
+              </span>
+            </li>
+            <li class="nav__item">
+              <span class="nav__inner">
+                <span class="nav__title">Proximos juegos</span>
+              </span>
+            </li>
+            <li class="nav__item">
+              <span class="nav__inner">
+                <span class="nav__title">Juegos independientes</span>
+              </span>
+            </li>
+            <li class="nav__item nav__item">
+              <span class="nav__inner">
+                <span class="nav__title">Productos</span>
+              </span>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
-    <div class="conatinerindex">
-      <div class="posicionindex">
-        <div class="caja uno">
-          <h1>NINTENDO SWITCH</h1>
-          <div class="texto">
-            <h4>Juega donde quieras, cuando quieras y con quien quieras</h4>
-          </div>
-        </div>
-
-        <div class="caja dos">
-          <h1>PLAYSTATION 5</h1>
-          <div class="texto">
-            <h4>Sé increíble, sorpréndete, sé PlayStation</h4>
-          </div>
-        </div>
-
-        <div class="caja tres">
-          <h1>XBOX SERIES X</h1>
-          <div class="texto">
-            <h4>LA NUEVA XBOX SERIES X. LA MÁS RÁPIDA. LA MÁS POTENTE</h4>
-          </div>
+    <section class="presentacion">
+      <div class="flex-item1">
+        <h1>
+          Las grandes marcas de los videojuegos que brindan horas de diversion y
+          entretenimiento
+        </h1>
+        <p>
+          Descubre los diferentes juegos que estan disponibles o estaran a tu
+          alcanze en esta humilde pagina web.
+        </p>
+        <div>
+          <button class="btn-principal" type="submit">CONSOLAS</button>
+          <button class="btn-secundario" type="submit">JUEGOS</button>
         </div>
       </div>
+      <div class="flex-item2">
+        <img src="Imagenes/consolas.jpg" alt="imagen de consolas" />
+      </div>
+    </section>
+
+    <div class="wrapper">
+      <section class="consolas">
+        <div class="titulo-consolas">
+          <h2>
+            Las consolas que te brindan las mejores experiencias del mundo de
+            los videojuegos
+          </h2>
+        </div>
+
+        <div class="conatinerindex">
+          <div class="posicionindex">
+            <div class="caja uno">
+              <h1>NINTENDO SWITCH</h1>
+              <div class="texto">
+                <h4>Juega donde quieras, cuando quieras y con quien quieras</h4>
+              </div>
+            </div>
+
+            <div class="caja dos">
+              <h1>PLAYSTATION 5</h1>
+              <div class="texto">
+                <h4>Sé increíble, sorpréndete, sé PlayStation</h4>
+              </div>
+            </div>
+
+            <div class="caja tres">
+              <h1>XBOX SERIES X</h1>
+              <div class="texto">
+                <h4>LA NUEVA XBOX SERIES X. LA MÁS RÁPIDA. LA MÁS POTENTE</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
+
+    <footer>
+      <p class="footer-content"></p>
+    </footer>
   </body>
 </html>
