retoques en index

--- a/index.html
+++ b/index.html
@@ -32,29 +32,39 @@
         <div class="navlist">
           <ul class="nav">
             <li class="nav__item nav__item">
-              <span class="nav__inner">
-                <span class="nav__title">Inicio</span>
-              </span>
+              <a href="index.html">
+                <span class="nav__inner">
+                  <span class="nav__title">Inicio</span>
+                </span></a
+              >
             </li>
             <li class="nav__item nav__item">
-              <span class="nav__inner">
-                <span class="nav__title">Juegos</span>
-              </span>
+              <a href="Juegos.html">
+                <span class="nav__inner">
+                  <span class="nav__title">Juegos</span>
+                </span></a
+              >
             </li>
             <li class="nav__item">
-              <span class="nav__inner">
-                <span class="nav__title">Proximos juegos</span>
-              </span>
+              <a href="ProximosJuegos.html">
+                <span class="nav__inner">
+                  <span class="nav__title">Proximos juegos</span>
+                </span></a
+              >
             </li>
             <li class="nav__item">
-              <span class="nav__inner">
-                <span class="nav__title">Juegos independientes</span>
-              </span>
+              <a href="JuegosIndependientes.html">
+                <span class="nav__inner">
+                  <span class="nav__title">Juegos independientes</span>
+                </span></a
+              >
             </li>
             <li class="nav__item nav__item">
-              <span class="nav__inner">
-                <span class="nav__title">Productos</span>
-              </span>
+              <a href="Productos.html">
+                <span class="nav__inner">
+                  <span class="nav__title">Productos</span>
+                </span></a
+              >
             </li>
           </ul>
         </div>
@@ -64,30 +74,34 @@
     <section class="presentacion">
       <div class="flex-item1">
         <h1>
-          Las grandes marcas de los videojuegos que brindan horas de diversion y
-          entretenimiento
+          Descubre los diferentes videojuegos que existieron o existiran en las
+          consolas mas famosas
         </h1>
         <p>
-          Descubre los diferentes juegos que estan disponibles o estaran a tu
-          alcanze en esta humilde pagina web.
+          Notificate acerca los proximos juegos que saldran, de paso averigua
+          cuales hicieron historia o descubre las experiencias que aportan los
+          juegos independientes, esto y mucho más en Blythe.
         </p>
         <div>
-          <button class="btn-principal" type="submit">CONSOLAS</button>
-          <button class="btn-secundario" type="submit">JUEGOS</button>
+          <a href="#consolas">
+            <button class="btn-principal" type="submit">CONSOLAS</button>
+          </a>
         </div>
       </div>
       <div class="flex-item2">
-        <img src="Imagenes/consolas.jpg" alt="imagen de consolas" />
+        <img src="Imagenes/empresas.jpg" alt="imagen de consolas" />
       </div>
     </section>
 
     <div class="wrapper">
       <section class="consolas">
         <div class="titulo-consolas">
-          <h2>
-            Las consolas que te brindan las mejores experiencias del mundo de
-            los videojuegos
-          </h2>
+          <a name="consolas"
+            ><h2>
+              Las consolas que te brindan las mejores experiencias del mundo de
+              los videojuegos
+            </h2></a
+          >
         </div>
 
         <div class="conatinerindex">
@@ -118,7 +132,24 @@
     </div>
 
     <footer>
-      <p class="footer-content"></p>
+      <p class="footer-content">REDES SOCIALES</p>
+      <div>
+        <a href="https://www.instagram.com/carl_beckmann/" target="_blank">
+          <img src="/imagenes/Intagram.png" alt="Intagram" />
+        </a>
+        <a href="https://twitter.com/Carl060902" target="_blank">
+          <img src="/imagenes/Twitter.png.crdownload" alt="Twitter" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/carl-brandon-beckmann-charles-2a4023227/"
+          target="_blank"
+        >
+          <img src="/imagenes/Linke.png" alt="Linkeding" />
+        </a>
+        <a href="https://github.com/CarlBeckmann" target="_blank">
+          <img src="/imagenes/Github.png" alt="Github" />
+        </a>
+      </div>
     </footer>
   </body>
 </html>
