pagina Juegos.html terminada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Manjari&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="estilos/index.css" />
+    <link rel="stylesheet" href="estilos/main.css" />
 
     <link rel="icon" href="Imagenes/B.png" />
   </head>
@@ -135,19 +135,19 @@
       <p class="footer-content">REDES SOCIALES</p>
       <div>
         <a href="https://www.instagram.com/carl_beckmann/" target="_blank">
-          <img src="/imagenes/Intagram.png" alt="Intagram" />
+          <img src="imagenes/Intagram.png" alt="Intagram" />
         </a>
         <a href="https://twitter.com/Carl060902" target="_blank">
-          <img src="/imagenes/Twitter.png.crdownload" alt="Twitter" />
+          <img src="imagenes/Twitter.png" alt="Twitter" />
         </a>
         <a
           href="https://www.linkedin.com/in/carl-brandon-beckmann-charles-2a4023227/"
           target="_blank"
         >
-          <img src="/imagenes/Linke.png" alt="Linkeding" />
+          <img src="imagenes/Linke.png" alt="Linkeding" />
         </a>
         <a href="https://github.com/CarlBeckmann" target="_blank">
-          <img src="/imagenes/Github.png" alt="Github" />
+          <img src="imagenes/Github.png" alt="Github" />
         </a>
       </div>
     </footer>
