--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
       <p class="footer-content">REDES SOCIALES</p>
       <div>
         <a href="https://www.instagram.com/carl_beckmann/" target="_blank">
-          <img src="imagenes/Intagram.png" alt="Intagram" />
+          <img src="Imagenes/Intagram.png" alt="Intagram" />
         </a>
         <a href="https://twitter.com/Carl060902" target="_blank">
-          <img src="imagenes/Twitter.png" alt="Twitter" />
+          <img src="Imagenes/Twitter.png" alt="Twitter" />
         </a>
         <a
           href="https://www.linkedin.com/in/carl-brandon-beckmann-charles-2a4023227/"
           target="_blank"
         >
-          <img src="imagenes/Linke.png" alt="Linkeding" />
+          <img src="Imagenes/Linke.png" alt="Linkeding" />
         </a>
         <a href="https://github.com/CarlBeckmann" target="_blank">
-          <img src="imagenes/Github.png" alt="Github" />
+          <img src="Imagenes/Github.png" alt="Github" />
         </a>
       </div>
     </footer>
