Proximos Juegos Terminado

--- a/Juegos.html
+++ b/Juegos.html
@@ -307,9 +307,9 @@ Disfruta de la primera entrega mundo abierto de Pokemon. Todo se llevara a cabo 
             style="background-image: url(Imagenes/Scorn.jpg)"
           ></div>
           <div class="back">
-            <h2>Genero: JRPG</h2>
+            <h2>Genero: Terror</h2>
             <p>
-              
+              El jugador controla a un humanoide sin piel, perdido en un mundo de pesadilla lleno de extrañas criaturas y macabros tapices, que se asemeja a una estructura tecno-orgánica viviente compuesta de acero, carne y hueso. El jugador explorará diferentes regiones interconectadas de forma no lineal, buscando respuestas que expliquen más sobre el mundo del juego.
             </p>
           </div>
         </div>
