--- a/Juegos.html
+++ b/Juegos.html
@@ -23,6 +23,32 @@
   </head>
 
   <body>
+
+    <section class="presentacion">
+      <div class="flex-item1">
+        <h1>
+         Los videojuegos mas recientes de sus respectivas consolas
+        </h1>
+        <p>
+          Se podra apreciar los diferentes juegos exclusivos de cada consola.
+        </p>
+        <div>
+          <a href="#consolas">
+            <button class="btn-principal" type="submit">Nintendo Switch</button>
+          </a>
+          <a href="#consolas">
+            <button class="btn-principal" type="submit">Play Station 5</button>
+          </a>
+          <a href="#consolas">
+            <button class="btn-principal" type="submit">X Box Series X</button>
+          </a>
+        </div>
+      </div>
+      <div class="flex-item2">
+        <img src="Imagenes/juegosportada.jpg" alt="imagen de consolas" />
+      </div>
+    </section>
+    
     <header id="menu">
       <nav>
         <div class="logo">
