--- a/Productos.html
+++ b/Productos.html
@@ -73,23 +73,25 @@
 
     <section class="presentacion">
       <div class="flex-item1">
-        <h1>
-          Descubre los diferentes videojuegos que existieron o existiran en las
-          consolas mas famosas
-        </h1>
+        <h1>Productos disponibles en el mundo de los videojuegos.</h1>
         <p>
-          Notificate acerca los proximos juegos que saldran, de paso averigua
-          cuales hicieron historia o descubre las experiencias que aportan los
-          juegos independientes, esto y mucho más en Blythe.
+          En esta seccion encontraras diferentes productos relacionado con los
+          videojuegos, desde cosas utiles hasta packs de juegos.
         </p>
         <div>
           <a href="#consolas">
-            <button class="btn-principal" type="submit">CONSOLAS</button>
+            <button class="btn-principal" type="submit">VIDEOJUEGOS</button>
+          </a>
+          <a href="#consolas">
+            <button class="btn-principal" type="submit">ARTICULOS</button>
           </a>
         </div>
       </div>
       <div class="flex-item2">
-        <img src="Imagenes/empresas.jpg" alt="imagen de consolas" />
+        <img
+          src="Imagenes/productoimagenprincipal.jpg"
+          alt="imagen de principal"
+        />
       </div>
     </section>
 
