otros retoques finales

--- a/Productos.html
+++ b/Productos.html
@@ -79,19 +79,16 @@
           videojuegos, desde cosas utiles hasta packs de juegos.
         </p>
         <div>
-          <a href="#consolas">
+          <a href="#videojuegos">
             <button class="btn-principal" type="submit">VIDEOJUEGOS</button>
           </a>
-          <a href="#consolas">
+          <a href="#articulos">
             <button class="btn-principal" type="submit">ARTICULOS</button>
           </a>
         </div>
       </div>
       <div class="flex-item2">
-        <img
-          src="Imagenes/productoimagenprincipal.jpg"
-          alt="imagen de principal"
-        />
+        <img src="Imagenes/portadapro.jpg" alt="imagen de principal" />
       </div>
     </section>
 
@@ -110,7 +107,7 @@
 
     <div class="product-card">
       <div class="product-details">
-        <h1>Danganronpa Decadence</h1>
+        <a name="videojuegos"><h1>Danganronpa Decadence</h1></a>
         <p>Una increible coleccion de juegos de misterio.</p>
         <a href="#open-modal">
           <button class="btn-secundario" type="submit">Solicitar</button></a
@@ -146,6 +143,54 @@
       </div>
       <div class="product-image">
         <img src="Imagenes/mario+rabbits.jpg" alt="Mario+Rabbits" />
+      </div>
+    </div>
+
+    <div class="product-card">
+      <div class="product-details">
+        <a name="articulos"> <h1>Auriculares Gaming Trust GXT310 Radius</h1></a>
+        <a href="#open-modal">
+          <button class="btn-secundario" type="submit">Solicitar</button></a
+        >
+      </div>
+      <div class="product-image">
+        <img src="Imagenes/auriculares.png" alt="Auriculares" />
+      </div>
+    </div>
+
+    <div class="product-card">
+      <div class="product-details">
+        <h1>Teclado VIGOR GK70</h1>
+        <a href="#open-modal">
+          <button class="btn-secundario" type="submit">Solicitar</button></a
+        >
+      </div>
+      <div class="product-image">
+        <img src="Imagenes/keyboard.png" alt="Teclado" />
+      </div>
+    </div>
+
+    <div class="product-card">
+      <div class="product-details">
+        <h1>Elgato capturadora HD60s</h1>
+        <a href="#open-modal">
+          <button class="btn-secundario" type="submit">Solicitar</button></a
+        >
+      </div>
+      <div class="product-image">
+        <img src="Imagenes/capturadora.png" alt="capturadora" />
+      </div>
+    </div>
+
+    <div class="product-card">
+      <div class="product-details">
+        <h1>Play Station 5</h1>
+        <a href="#open-modal">
+          <button class="btn-secundario" type="submit">Solicitar</button></a
+        >
+      </div>
+      <div class="product-image">
+        <img src="Imagenes/play5.webp" alt="Play5" />
       </div>
     </div>
 
