--- a/ProximosJuegos.html
+++ b/ProximosJuegos.html
@@ -88,6 +88,23 @@
 
     <h2 class="meses">ABRIL</h2>
     <article class="proximojuego">
+      <img src="Imagenes/terrorbane.jpg" alt="Terrorbane" />
+      <div class="resumen__juego">
+        <div class="title">tERRORbane</div>
+        <div class="story">
+          <p>Estara diponible el 1 de abril de 2022</p>
+          <p>Esta galactica aventura estara disponible en PC, Switch</p>
+          <p>
+            tERRORbane es una aventura cómica en la que los bugs son tus AMIGOS.
+            ¡Disfruta explorando un mundo loco y extravagante, lleno de
+            personajes únicos y extravagantes y homenajes a la historia de los
+            videojuegos, desafía al desarrollador con tu creatividad y sé la
+            pesadilla de los errores!
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="proximojuego">
       <img
         src="Imagenes/LegoStarWars.jpg"
         alt="LEGO Star Wars: The Skywalker Saga"
@@ -114,6 +131,28 @@
         </div>
       </div>
     </article>
+
+    <article class="proximojuego">
+      <img src="Imagenes/show.jpg" alt="MLB: The Show 22 " />
+      <div class="resumen__juego">
+        <div class="title">MLB: The Show 22</div>
+        <div class="story">
+          <p>Estara diponible el 5 de abril de 2022</p>
+          <p>
+            Esta galactica aventura estara disponible en PS4, PS5, Switch, Xbox
+            One, Xbox Series X/S
+          </p>
+          <p>
+            Desata tu creatividad con tu jugador creado y busca la gloria en la
+            nueva y mejorada Diamond Dynasty. Juega solo u online* frente a
+            otros con tu equipo personalizado para poner a prueba tus
+            habilidades y convertirte en el rey del diamante. Trata el nuevo
+            modo Mini Seasons , en el que cada temporada te ofrecerá nuevos
+            desafíos en los que tendrás que enfrentarte a nuevos rivales!
+          </p>
+        </div>
+      </div>
+    </article>
     <article class="proximojuego">
       <img
         src="Imagenes/Chrono Cross.jpg"
@@ -133,7 +172,53 @@
         </div>
       </div>
     </article>
-
+    <article class="proximojuego">
+      <img src="Imagenes/godfall.jpg" alt="Godfall" />
+      <div class="resumen__juego">
+        <div class="title">Godfall</div>
+        <div class="story">
+          <p>Estara diponible el 7 de abril de 2022</p>
+          <p>Disfruta este rpg en Xbox One, Xbox Series X/S</p>
+          <p>
+            Salva Aperion. Eres uno de los últimos caballeros valorianos,
+            maestros del combate que emplean las armaduras legendarias conocidas
+            como Valorplates. Asciende en Godfall, el primer RPG de acción
+            looter-slasher centrado en el combate cuerpo a cuerpo.
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="proximojuego">
+      <img src="Imagenes/house.jpg" alt=">House of the Dead Remake" />
+      <div class="resumen__juego">
+        <div class="title">House of the Dead Remake</div>
+        <div class="story">
+          <p>Estara diponible el 7 de abril de 2022</p>
+          <p>Un nuevo exclusivo para la Nintendo Switch</p>
+          <p>
+            THE HOUSE OF THE DEAD: Remake es la nueva versión del juego lanzado
+            en 1997 para máquinas recreativas. El juego de disparos clásico
+            «sobre raíles» recibe un montón de mejoras y cambios en la forma de
+            jugar para adaptarlo a los estándares de juego modernos.
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="proximojuego">
+      <img src="Imagenes/out.png" alt=">Out There: Oceans of Time" />
+      <div class="resumen__juego">
+        <div class="title">Out There: Oceans of Time</div>
+        <div class="story">
+          <p>Estara diponible el 7 de abril de 2022</p>
+          <p>Un nuevo exclusivo para PC</p>
+          <p>
+            Out There: Oceans of Time es un juego de exploración espacial que te
+            pone al mando de una misión de descubrimiento interestelar por todo
+            un cosmos vasto y dinámico.
+          </p>
+        </div>
+      </div>
+    </article>
     <article class="proximojuego">
       <img
         src="Imagenes/Advancewars.jpg"
@@ -177,7 +262,54 @@
         </div>
       </div>
     </article>
-
+    <article class="proximojuego">
+      <img src="Imagenes/Road96.jpg" alt=">Road 96" />
+      <div class="resumen__juego">
+        <div class="title">Road 96</div>
+        <div class="story">
+          <p>Estara diponible el 14 de abril de 2022</p>
+          <p>Sale para PS4, PS5, Xbox One, Xbox Series X/S</p>
+          <p>
+            Road 96 es un hermoso y loco viaje por carretera. El descubrimiento
+            de lugares emocionantes y personas muy peculiares en tu propio viaje
+            hacia la libertad. Una aventura narrativa en constante evolución
+            inspirada en las obras de Tarantino, los hermanos Coen y Bong
+            Joon-ho.
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="proximojuego">
+      <img src="Imagenes/starwar.webp" alt="Star Wars: The Force Unleashed" />
+      <div class="resumen__juego">
+        <div class="title">Star Wars: The Force Unleashed</div>
+        <div class="story">
+          <p>Estara diponible el 20 de abril de 2022</p>
+          <p>Sale para Switch</p>
+          <p>
+            Star Wars: The Force Unleashed, Star Wars: El Poder de la Fuerza, ​
+            o Star Wars: La Fuerza Desencadenada​ es un videojuego de la nueva
+            generación de Star Wars y que es parte medular del proyecto
+            multimedia Star Wars: The Force Unleashed
+          </p>
+        </div>
+      </div>
+    </article>
+    <article class="proximojuego">
+      <img src="Imagenes/moto.jpg" alt="MotoGP™22" />
+      <div class="resumen__juego">
+        <div class="title">MotoGP™22</div>
+        <div class="story">
+          <p>Estara diponible el 21 de abril de 2022</p>
+          <p>Para PC, PS4, PS5, Switch, Xbox One, Xbox Series X/S</p>
+          <p>
+            Motores encendidos: dale luz verde a la experiencia de juego más
+            inmersiva y auténtica de MotoGP™. ¡Lo virtual y lo real nunca se
+            habían mezclado tan bien en MotoGP™22!
+          </p>
+        </div>
+      </div>
+    </article>
     <article class="proximojuego">
       <img
         src="Imagenes/nintendoswitchsports.jpg"
@@ -196,8 +328,60 @@
         </div>
       </div>
     </article>
-
+    <article class="proximojuego">
+      <img src="Imagenes/exop.jpg" alt="Exophobia" />
+      <div class="resumen__juego">
+        <div class="title">Exophobia</div>
+        <div class="story">
+          <p>Estara diponible el 29 de abril de 2022</p>
+          <p>Disponible en PC, PS4, PS5, Switch, Xbox One, Xbox Series X/S</p>
+          <p>
+            Explora y lucha para abrirte camino a través de una nave espacial
+            humana estrellada e infestada de implacables hordas de alienígenas
+            en este juego de disparos en primera persona de inspiración retro
+            que presenta imágenes de píxeles nítidas y coloridas y música
+            electrónica. Descubre nuevas áreas y vuélvete más poderoso en
+            combate con emocionantes mejoras de armas y potenciadores.
+          </p>
+        </div>
+      </div>
+    </article>
     <h2 class="meses">MAYO</h2>
+
+    <article class="proximojuego">
+      <img src="Imagenes/chaos.jpg" alt="Vampire: The Masquerade - Swansong" />
+      <div class="resumen__juego">
+        <div class="title">Warhammer 40,000: Chaos Gate - Daemonhunters</div>
+        <div class="story">
+          <p>Estara diponible el 5 de mayo de 2022</p>
+          <p>Juegalo solo en PC</p>
+          <p>
+            Dirige a los Caballeros Grises, la mejor arma que tiene la humanidad
+            en este juego de rol táctico por turnos ambientado en el universo de
+            Warhammer 40000.
+          </p>
+        </div>
+      </div>
+    </article>
+
+    <article class="proximojuego">
+      <img src="Imagenes/salt.jpg" alt="Salt and Sacrifice" />
+      <div class="resumen__juego">
+        <div class="title">Salt and Sacrifice</div>
+        <div class="story">
+          <p>Estara diponible el 10 de mayo de 2022</p>
+          <p>Juegalo solo en PC</p>
+          <p>
+            Un reino antaño pacífico se ve sumido en el caos por la invasión de
+            las hordas de magos: encarnaciones despiadadas del caos elemental.
+            Los inquisidores marcados (Marked Inquisitors), las fuerzas de los
+            condenados, han sido movilizados una vez más para enfrentarse contra
+            la amenaza existencial de la magia. Un secreto enterrado amenaza con
+            llevar al antiguo imperio a la ruina.
+          </p>
+        </div>
+      </div>
+    </article>
 
     <article class="proximojuego">
       <img
@@ -260,6 +444,8 @@
         </div>
       </div>
     </article>
+
+    <h2>Proximamente mucho más...</h2>
 
     <footer>
       <p class="footer-content">REDES SOCIALES</p>
