Fin del Proyecto Final

--- a/Juegos.html
+++ b/Juegos.html
@@ -26,7 +26,7 @@
     <header id="menu">
       <nav>
         <div class="logo">
-          <span>BLYTHE</span>
+          <span><a name="regresar"></a>BLYTHE</a></span>
         </div>
 
         <div class="navlist">
@@ -359,6 +359,9 @@ Disfruta de la primera entrega mundo abierto de Pokemon. Todo se llevara a cabo 
           <img src="Imagenes/Github.png" alt="Github" />
         </a>
       </div>
+      <a href="#regresar">
+        <button class="btn-secundario" type="submit">Regresar a Arriba</button>
+      </a>
     </footer>
   </body>
 </html>
