--- a/JuegosIndependientes.html
+++ b/JuegosIndependientes.html
@@ -27,7 +27,7 @@
     <header id="menu">
       <nav>
         <div class="logo">
-          <span>BLYTHE</span>
+          <span><a name="regresar"></a>BLYTHE</a></span>
         </div>
 
         <div class="navlist">
@@ -397,6 +397,9 @@
           <img src="Imagenes/Github.png" alt="Github" />
         </a>
       </div>
+      <a href="#regresar">
+        <button class="btn-secundario" type="submit">Regresar a Arriba</button>
+      </a>
     </footer>
   </body>
 </html>
