--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header id="menu">
       <nav>
         <div class="logo">
-          <span>BLYTHE</span>
+         <span><a name="regresar"></a>BLYTHE</a></span>
         </div>
 
         <div class="navlist">
@@ -109,27 +109,28 @@
             <div class="caja uno">
               <h1>NINTENDO SWITCH</h1>
               <div class="texto">
-                <h4>Juega donde quieras, cuando quieras y con quien quieras</h4>
+                <h3>Juega donde quieras, cuando quieras y con quien quieras</h3>
               </div>
             </div>
 
             <div class="caja dos">
               <h1>PLAYSTATION 5</h1>
               <div class="texto">
-                <h4>Sé increíble, sorpréndete, sé PlayStation</h4>
+                <h3>Sé increíble, sorpréndete, sé PlayStation</h3>
               </div>
             </div>
 
             <div class="caja tres">
               <h1>XBOX SERIES X</h1>
               <div class="texto">
-                <h4>LA NUEVA XBOX SERIES X. LA MÁS RÁPIDA. LA MÁS POTENTE</h4>
+                <h3>LA NUEVA XBOX SERIES X. LA MÁS RÁPIDA. LA MÁS POTENTE</h3>
               </div>
             </div>
           </div>
         </div>
       </section>
     </div>
+
 
     <footer>
       <p class="footer-content">REDES SOCIALES</p>
@@ -150,6 +151,9 @@
           <img src="Imagenes/Github.png" alt="Github" />
         </a>
       </div>
+      <a href="#regresar">
+        <button class="btn-secundario" type="submit">Regresar a Arriba</button>
+      </a>
     </footer>
   </body>
 </html>
