--- a/ProximosJuegos.html
+++ b/ProximosJuegos.html
@@ -26,7 +26,7 @@
     <header id="menu">
       <nav>
         <div class="logo">
-          <span>BLYTHE</span>
+          <span><a name="regresar"></a>BLYTHE</a></span>
         </div>
 
         <div class="navlist">
@@ -80,13 +80,22 @@
         <p>
           A continuacion veras los juegos que saldran en los proximos meses.
         </p>
+        <div>
+          <a href="#abril">
+            <button class="btn-principal" type="submit">Abril</button>
+          </a>
+        
+          <a href="#mayo">
+            <button class="btn-principal" type="submit">Mayo</button>
+          </a>
+        </div>
       </div>
       <div class="flex-item2">
         <img src="Imagenes/2022.jpg" alt="juegos 2022" />
       </div>
     </section>
 
-    <h2 class="meses">ABRIL</h2>
+    <a name="abril"><h2 class="meses">ABRIL</h2></a>
     <article class="proximojuego">
       <img src="Imagenes/terrorbane.jpg" alt="Terrorbane" />
       <div class="resumen__juego">
@@ -346,7 +355,7 @@
         </div>
       </div>
     </article>
-    <h2 class="meses">MAYO</h2>
+    <a name="mayo"><h2 class="meses">MAYO</h2></a>
 
     <article class="proximojuego">
       <img src="Imagenes/chaos.jpg" alt="Vampire: The Masquerade - Swansong" />
@@ -466,6 +475,9 @@
           <img src="Imagenes/Github.png" alt="Github" />
         </a>
       </div>
+      <a href="#regresar">
+        <button class="btn-secundario" type="submit">Regresar a Arriba</button>
+      </a>
     </footer>
   </body>
 </html>
